Add PostInit annotation, fix list dependency handler